--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -34,6 +34,9 @@
 <script type="text/javascript" src='{% static 'bower_components/nvd3/nv.d3.min.js' %}'></script>
 <script type="text/javascript" src='{% static 'bower_components/angular-nvd3/dist/angular-nvd3.min.js'  %}'></script>
 
+<!-- <script type="text/javascript" src='{% static 'js/dataTable.js' %}'></script> -->
+<!-- <script type="text/javascript" src='{% static 'js/dataTable.helpers.js' %}'></script> -->
+<!-- <script type="text/javascript" src='{% static 'js/dataTable.cjs.js' %}'></script> -->
 <script type="text/javascript" src='{% static 'js/dataTable.helpers.min.js' %}'></script>
 
 <script src='{% static 'js/app.js' %}'></script>
