--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -11,8 +11,8 @@
 <link rel="stylesheet" type="text/css" href='{% static 'bower_components/nvd3/nv.d3.min.css' %}'>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
-<link rel="stylesheet" href='{% static 'css/dataTable.css' %}'/>
-<link rel="stylesheet" href='{% static 'css/material.css' %}'/>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/sandstone/bootstrap.min.css">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href='{% static 'css/app.css' %}'/>
 
 {% endblock styles %}
@@ -33,11 +33,6 @@
 <script type="text/javascript" src='{% static 'bower_components/d3/d3.min.js' %}'></script>
 <script type="text/javascript" src='{% static 'bower_components/nvd3/nv.d3.min.js' %}'></script>
 <script type="text/javascript" src='{% static 'bower_components/angular-nvd3/dist/angular-nvd3.min.js'  %}'></script>
-
-<!-- <script type="text/javascript" src='{% static 'js/dataTable.js' %}'></script> -->
-<!-- <script type="text/javascript" src='{% static 'js/dataTable.helpers.js' %}'></script> -->
-<!-- <script type="text/javascript" src='{% static 'js/dataTable.cjs.js' %}'></script> -->
-<script type="text/javascript" src='{% static 'js/dataTable.helpers.min.js' %}'></script>
 
 <script src='{% static 'js/app.js' %}'></script>
 <script src='{% static 'js/Students.js' %}'></script>
