--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -12,8 +12,8 @@
   <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
     <md-toolbar >
       <div class="md-toolbar-tools" >
-        <span ng-if="ctrl.selected == null">All Students</span>
-        <span ng-if="ctrl.selected != null">{{ctrl.selected.name}}</span>
+        <h1><span ng-if="ctrl.selected == null">All Students</span></h1>
+        <h1><span ng-if="ctrl.selected != null">{{ctrl.selected.name}}</span></h1>
         <span flex></span>
         <form class="search-bar">
           <div class="form-group">
@@ -29,49 +29,89 @@
 
   <div layout="row" layout-sm="column">
     <md-content id="content" ng-if="ctrl.selected == null">
-      <table class="table table-bordered table-striped">
-        <thead>
-          <tr>
-            <td>
-              <a href="" ng-click="ctrl.sortType = 'name'; ctrl.sortReverse = !ctrl.sortReverse">
-                Name
-                <span ng-show="ctrl.sortType == 'name' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
-                <span ng-show="ctrl.sortType == 'name' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
-              </a>
-            </td>
-            <td>
-              <a href="" ng-click="ctrl.sortType = 'student_ID'; ctrl.sortReverse = !ctrl.sortReverse">
-                Student ID
-                <span ng-show="ctrl.sortType == 'student_ID' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
-                <span ng-show="ctrl.sortType == 'student_ID' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
-              </a>
-            </td>
-            <td>
-              <a href="" ng-click="ctrl.sortType = 'GPA'; ctrl.sortReverse = !ctrl.sortReverse">
-                GPA
-                <span ng-show="ctrl.sortType == 'GPA' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
-                <span ng-show="ctrl.sortType == 'GPA' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
-              </a>
-            </td>
-            <td>
-              <a href="" ng-click="ctrl.sortType = 'year'; ctrl.sortReverse = !ctrl.sortReverse">
-                Year
-                <span ng-show="ctrl.sortType == 'year' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
-                <span ng-show="ctrl.sortType == 'year' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
-              </a>
-            </td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="student in ctrl.students | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchStudent">
-            <td>{{ student.name }}</td>
-            <td>{{ student.student_ID }}</td>
-            <td>{{ student.GPA }}</td>
-            <td>{{ student.year }}</td>
-          </tr>
-        </tbody>
-      </table>
-
+      <div class="tb filter-table">
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <td><a>Filters<a></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="side-title">Status</td>
+            </tr>
+            <tr>
+              <td class="side-title">Cohorts</td>
+            </tr>
+            <tr>
+              <td class="side-title">Class Standing</td>
+            </tr>
+            <tr>
+              <td class="side-title">GPA Range</td>
+            </tr>
+          </tbody>
+        </table>
+      </div><!-- comment used for removing the gap
+   --><div class="tb student-table">
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <td>
+                <a href="" ng-click="ctrl.sortType = 'name'; ctrl.sortReverse = !ctrl.sortReverse">
+                  Name
+                  <span ng-show="ctrl.sortType == 'name' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="ctrl.sortType == 'name' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a href="" ng-click="ctrl.sortType = 'student_ID'; ctrl.sortReverse = !ctrl.sortReverse">
+                  Student ID
+                  <span ng-show="ctrl.sortType == 'student_ID' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="ctrl.sortType == 'student_ID' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a href="" ng-click="ctrl.sortType = 'status'; ctrl.sortReverse = !ctrl.sortReverse">
+                  Status
+                  <span ng-show="ctrl.sortType == 'status' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="ctrl.sortType == 'status' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a href="" ng-click="ctrl.sortType = 'cohorts'; ctrl.sortReverse = !ctrl.sortReverse">
+                  Cohorts
+                  <span ng-show="ctrl.sortType == 'cohorts' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="ctrl.sortType == 'cohorts' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a href="" ng-click="ctrl.sortType = 'GPA'; ctrl.sortReverse = !ctrl.sortReverse">
+                  GPA
+                  <span ng-show="ctrl.sortType == 'GPA' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="ctrl.sortType == 'GPA' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a href="" ng-click="ctrl.sortType = 'year'; ctrl.sortReverse = !ctrl.sortReverse">
+                  Year
+                  <span ng-show="ctrl.sortType == 'year' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="ctrl.sortType == 'year' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="student in ctrl.students | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchStudent">
+              <td class="bold">{{ student.name }}</td>
+              <td>{{ student.student_ID }}</td>
+              <td>{{ student.status }}</td>
+              <td>{{ student.cohorts }}</td>
+              <td>{{ student.GPA }}</td>
+              <td>{{ student.year }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </md-content>
   </div>
 </md-content>
