--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -13,11 +13,13 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/sandstone/bootstrap.min.css">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<link rel="stylesheet" href='{% static 'css/app.css' %}'/>
+<link rel="stylesheet" href='{% static 'css/app.css' %}'>
+<link rel="stylesheet" href='{% static 'bower_components/angular-rangeslider/angular.rangeSlider.css' %}'>
 
 {% endblock styles %}
 
 {% block jquery %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 {% endblock jquery %}
 
 {% block fastclick %}
@@ -32,7 +34,8 @@
 
 <script type="text/javascript" src='{% static 'bower_components/d3/d3.min.js' %}'></script>
 <script type="text/javascript" src='{% static 'bower_components/nvd3/nv.d3.min.js' %}'></script>
-<script type="text/javascript" src='{% static 'bower_components/angular-nvd3/dist/angular-nvd3.min.js'  %}'></script>
+<script type="text/javascript" src='{% static 'bower_components/angular-nvd3/dist/angular-nvd3.min.js' %}'></script>
+<script type="text/javascript" src='{% static 'bower_components/angular-rangeslider/angular.rangeSlider.js' %}'></script>
 
 <script src='{% static 'js/app.js' %}'></script>
 <script src='{% static 'js/Students.js' %}'></script>
