Update interface to fetch data from API
Fix SE-21

--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -41,4 +41,8 @@
 <script src='{% static 'js/Students.js' %}'></script>
 <script src='{% static 'js/StudentController.js' %}'></script>
 <script src='{% static 'js/StudentExplorerApiService.js' %}'></script>
+
+<script type="text/javascript">
+    var static_root = {{ STATIC_URL }}
+</script>
 {% endblock scripts %}
