--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base.html' %}
-
+{% load static %}
 {% block page-title %}SE{% endblock %}
 
 {% block main %}
@@ -41,7 +41,7 @@
               <td class="side-title">
                 Status
                 <ul style="list-style-type:none">
-                  <li ng-repeat="icon in ctrl.icons"><img ng-src="{{icon.url}}" alt="{{icon.name}}"/>{{icon.name}}</li>
+                  <li ng-repeat="icon in ctrl.icons"><a>{% endverbatim %}<img ng-src="{% static '{{icon.url}}' %}" alt="{{icon.name}}"/>{% verbatim %}{{icon.name}}</a></li>
                 </ul>
               </td>
             </tr>
@@ -122,9 +122,9 @@
               <td>{{ student.student_ID }}</td>
               <td>
                 <ul style="list-style-type:none">
-                  <li>{{ student.status[0].engage }} course<span ng-if="student.status[0].engage > 1">s</span></li>
-                  <li>{{ student.status[0].explore }} course<span ng-if="student.status[0].explore > 1">s</span></li>
-                  <li>{{ student.status[0].encourage }} course<span ng-if="student.status[0].encourage > 1">s</span></li>
+                  <li ng-if="student.status[0].engage > 0">{% endverbatim %}<img ng-repeat="icon in ctrl.icons" ng-if="icon.name == 'Engage'" ng-src="{% static '{{icon.url}}' %}" alt="{{icon.name}}" />{% verbatim %}{{ student.status[0].engage }} course<span ng-if="student.status[0].engage > 1">s</span></li>
+                  <li ng-if="student.status[0].explore > 0">{% endverbatim %}<img ng-repeat="icon in ctrl.icons" ng-if="icon.name == 'Explore'" ng-src="{% static '{{icon.url}}' %}" alt="{{icon.name}}" />{% verbatim %}{{ student.status[0].explore }} course<span ng-if="student.status[0].explore > 1">s</span></li>
+                  <li ng-if="student.status[0].encourage > 0">{% endverbatim %}<img ng-repeat="icon in ctrl.icons" ng-if="icon.name == 'Encourage'" ng-src="{% static '{{icon.url}}' %}" alt="{{icon.name}}" />{% verbatim %}{{ student.status[0].encourage }} course<span ng-if="student.status[0].encourage > 1">s</span></li>
                 </ul>
               </td>
               <td>
