Add partially working endpoints

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -129,7 +129,7 @@
               </td>
               <td>
                 <ul style="list-style-type:none">
-                  <li ng-repeat="cohort in student.cohorts">{{ cohort.description }}</li>
+                  <li ng-repeat="cohort in student.cohorts">{{ cohort }}</li>
                 </ul></td>
               <td>{{ student.GPA }}</td>
               <td>{{ student.year }}</td>
