--- a/dashboard/static/css/dashboard.css
+++ b/dashboard/static/css/dashboard.css
@@ -32,11 +32,6 @@ md-content p {
   margin-left: 12px;
 }
 
-/*md-content img {
-  width: 250px !important;
-  margin: 30px 25px;
-}*/
-
 md-content ul {
   margin-bottom: 25px;
 }
@@ -72,6 +67,10 @@ table {
   border: 0px !important;
 }
 
+.student-table ul {
+  margin-bottom: 20px;
+}
+
 table thead {
   border-bottom: 2px solid #CCC;
 }
@@ -86,7 +85,7 @@ table ul {
 }
 
 table td {
-  width: 180px !important;
+  width: 180px;
   padding-left: 15px !important;
 }
 
@@ -151,4 +150,9 @@ table img {
 
 .unselected {
   color: #CCC !important;
+}
+
+.not-sortable:hover {
+  color: black;
+  text-decoration: none;
 }
