--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -13,7 +13,8 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/sandstone/bootstrap.min.css">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<link rel="stylesheet" href='{% static 'css/app.css' %}'>
+<link rel="stylesheet" href='{% static 'css/dashboard.css' %}'>
+<link rel="stylesheet" href='{% static 'css/studentPage.css' %}'>
 <link rel="stylesheet" href='{% static 'bower_components/angular-rangeslider/angular.rangeSlider.css' %}'>
 
 {% endblock styles %}
