--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -36,7 +36,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr ng-if="ctrl.hasStatusData">
               <td class="side-title">
                 Status
                 <ul style="list-style-type:none">
@@ -47,7 +47,7 @@
 <!--             <tr>
               <td class="side-title">Cohorts</td>
             </tr> -->
-            <tr>
+            <tr ng-if="ctrl.hasYearData">
               <td class="side-title">
                 Class Standing
                 <ul style="list-style-type:none">
@@ -58,7 +58,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr ng-if="ctrl.hasGPAData">
               <td class="side-title">GPA Range
                 <p><span>{{ctrl.gpaSlider.min}}</span> to <span>{{ctrl.gpaSlider.max}}</span></p>
                 <div class="range-slider" range-slider min="0" max="4" model-min="ctrl.gpaSlider.min" model-max="ctrl.gpaSlider.max" step="0.5" decimal-places="1" disabled="false"></div>
