added dashboard page for advisors

--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href='{% static 'css/dashboard.css' %}'>
 <link rel="stylesheet" href='{% static 'css/studentPage.css' %}'>
+<link rel="stylesheet" href='{% static 'css/advisorDashboard.css' %}'>
 <link rel="stylesheet" href='{% static 'bower_components/angular-rangeslider/angular.rangeSlider.css' %}'>
 
 {% endblock styles %}
@@ -40,7 +41,9 @@
 
 <script src='{% static 'js/app.js' %}'></script>
 <script src='{% static 'js/Students.js' %}'></script>
+<script src='{% static 'js/Advisors.js' %}'></script>
 <script src='{% static 'js/StudentController.js' %}'></script>
+<script src='{% static 'js/AdvisorController.js' %}'></script>
 <script src='{% static 'js/StudentExplorerApiService.js' %}'></script>
 
 <script type="text/javascript">
