--- a/dashboard/templates/dashboard/studentPage.html
+++ b/dashboard/templates/dashboard/studentPage.html
@@ -12,7 +12,7 @@
   <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
     <md-toolbar >
       <div class="md-toolbar-tools" >
-        <md-button class="md-icon-button back-button" aria-label="Settings" ng-click="ctrl.goToDashboard()">
+        <md-button class="md-icon-button back-button" aria-label="Settings" ng-click="ctrl.goToDashboard(ctrl.selected.advisors[0].advisor.username)">
           <md-icon md-font-library="material-icons">arrow_back</md-icon>
         </md-button>
         <h1><span>{{ctrl.selected.last_name}}, {{ctrl.selected.first_name}}</span></h1>
