fixed advisor and scroll bug

--- a/sespa/app/views/studentList.html
+++ b/sespa/app/views/studentList.html
@@ -111,7 +111,7 @@
 	          </thead>
 	          <tbody>
 	            <tr ng-repeat="student in ctrl.students | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchStudent" ng-if="ctrl.checkAdvisor(student.advisors) &amp;&amp; ctrl.checkGPA(student.GPA) &amp;&amp; ctrl.checkYear(student.year)">
-	              <td class="bold"><a href="http://localhost:2080/#/{{ctrl.selectedAdvisorName}}/studentDetail/{{student.username}}/">{{ student.last_name }}, {{ student.first_name }}</a></td>
+	              <td class="bold"><a ng-click="ctrl.scroll()" href="http://localhost:2080/#/{{ctrl.selectedAdvisorName}}/studentDetail/{{student.username}}/">{{ student.last_name }}, {{ student.first_name }}</a></td>
 	              <td>{{ student.univ_id }}</td>
 	              <td ng-if="ctrl.hasStatusData">
 	                <ul style="list-style-type:none">
