--- a/sespa/app/views/advisorList.html
+++ b/sespa/app/views/advisorList.html
@@ -54,7 +54,7 @@
 	          </thead>
 	          <tbody>
 	            <tr ng-repeat="advisor in ctrl.advisors | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchAdvisor">
-	              <td class="bold"><a href="http://localhost:2080/#/{{advisor.username}}/studentList/">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
+	              <td class="bold"><a ng-click="ctrl.scroll()" href="http://localhost:2080/#/{{advisor.username}}/studentList/">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
 	              <td>{{ advisor.univ_id }}</td>
 	            </tr>
 	          </tbody>
