--- a/sespa/app/views/studentDetail.html
+++ b/sespa/app/views/studentDetail.html
@@ -6,7 +6,7 @@
 	  <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
 	    <md-toolbar >
 	      <div class="md-toolbar-tools" >
-	        <md-button class="md-icon-button back-button" aria-label="Settings" ng-click="ctrl.goToDashboard(ctrl.selected.advisors[0].advisor.username)">
+	        <md-button class="md-icon-button back-button" aria-label="Settings" ng-click="ctrl.goToDashboard(ctrl.selectedAdvisorName)">
 	          <md-icon md-font-library="material-icons">arrow_back</md-icon>
 	        </md-button>
 	        <h1><span>{{ctrl.selected.last_name}}, {{ctrl.selected.first_name}}</span></h1>
