Cleanup and rationalization

--- a/sespa/app/views/advisorList.html
+++ b/sespa/app/views/advisorList.html
@@ -1,4 +1,4 @@
-<div ng-controller="AdvisorcontrollerCtrl as ctrl" ng-cloak>
+<div ng-controller="AdvisorCtrl as ctrl" ng-cloak>
 	<div flex layout="row">
 
 	<md-content>
