--- a/sespa/app/views/studentDetail.html
+++ b/sespa/app/views/studentDetail.html
@@ -1,4 +1,4 @@
-<div ng-controller="StudentcontrollerCtrl as ctrl" ng-cloak>
+<div ng-controller="StudentCtrl as ctrl" ng-cloak>
 
 	<div flex layout="row">
 
