--- a/sespa/app/views/advisorList.html
+++ b/sespa/app/views/advisorList.html
@@ -43,7 +43,7 @@
 	            </tr>
 	          </thead>
 	          <tbody>
-            <tr ng-repeat="advisor in advisors | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchAdvisor">
+            <tr ng-repeat="advisor in ctrl.advisors | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchAdvisor">
 	              <td class="bold"><a ng-click="ctrl.scroll()" href="http://localhost:2080/#/advisors/{{advisor.username}}">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
 	              <td>{{ advisor.univ_id }}</td>
 	            </tr>
