--- a/sespa/app/views/advisor_list.html
+++ b/sespa/app/views/advisor_list.html
@@ -12,7 +12,7 @@
 	          <div class="form-group">
 	            <div class="input-group">
 	              <div class="input-group-addon"><i class="fa fa-search"></i></div>
-	              <input type="text" class="form-control" placeholder="Search advisor" ng-model="ctrl.searchAdvisor">
+	              <input type="text" class="form-control" placeholder="Search advisor" ng-model="searchAdvisor">
 	            </div>      
 	          </div>
 	        </form>
@@ -27,24 +27,24 @@
 	          <thead>
 	            <tr>
 	              <td>
-	                <a href="" ng-click="ctrl.sortType = 'last_name'; ctrl.sortReverse = !ctrl.sortReverse">
+	                <a href="" ng-click="sortType = 'last_name'; sortReverse = !sortReverse">
 	                  Name
-	                  <span ng-show="ctrl.sortType == 'last_name' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
-	                  <span ng-show="ctrl.sortType == 'last_name' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+	                  <span ng-show="sortType == 'last_name' &amp;&amp; !sortReverse" class="fa fa-caret-down"></span>
+	                  <span ng-show="sortType == 'last_name' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
 	                </a>
 	              </td>
 	              <td>
-	                <a href="" ng-click="ctrl.sortType = 'univ_id'; ctrl.sortReverse = !ctrl.sortReverse">
+	                <a href="" ng-click="sortType = 'univ_id'; sortReverse = !sortReverse">
 	                  Advisor ID
-	                  <span ng-show="ctrl.sortType == 'univ_id' &amp;&amp; !ctrl.sortReverse" class="fa fa-caret-down"></span>
-	                  <span ng-show="ctrl.sortType == 'univ_id' &amp;&amp; ctrl.sortReverse" class="fa fa-caret-up"></span>
+	                  <span ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse" class="fa fa-caret-down"></span>
+	                  <span ng-show="sortType == 'univ_id' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
 	                </a>
 	              </td>
 	            </tr>
 	          </thead>
 	          <tbody>
-            <tr ng-repeat="advisor in ctrl.advisors | orderBy:ctrl.sortType:ctrl.sortReverse | filter:ctrl.searchAdvisor">
-	              <td class="bold"><a ng-click="ctrl.scroll()" href="http://localhost:2080/#/advisors/{{advisor.username}}">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
+            <tr ng-repeat="advisor in advisors | orderBy:sortType:sortReverse | filter:searchAdvisor">
+	              <td class="bold"><a ng-click="scroll()" href="http://localhost:2080/#/advisors/{{advisor.username}}">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
 	              <td>{{ advisor.univ_id }}</td>
 	            </tr>
 	          </tbody>
