Fix icon display

--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -118,9 +118,10 @@
 	              <td class="bold"><a ng-click="scroll()" href="/#/students/{{student.username}}/">{{ student.last_name }}, {{ student.first_name }}</a></td>
 	              <td>{{ student.univ_id }}</td>
 	              <td ng-if="hasStatusData">
-	                <div style="list-style-type:none" ng-repeat="status in student.statuses track by $index">
-	                  <img class="course-status {{ status | lowercase }}" ng-src="images/Status_Icons_{{status}}.png" alt="{{status}}" />
-				  	</div>
+					  <img ng-repeat="status in student.statuses track by $index"
+					  	   class="course-status {{ status | lowercase }}"
+						   ng-src="images/Status_Icons_{{status}}.png"
+						   alt="{{status}}" />
 	              </td>
 	              <td>
 	                <ul style="list-style-type:none">
